// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> Default story renders snapshot 1`] = `
<table
  class="table"
>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          Name
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          Status
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          Chart
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          Window
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          Last Update
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 1
      </td>
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 2
      </td>
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 3
      </td>
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 4
      </td>
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 1
      </td>
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 2
      </td>
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 3
      </td>
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 4
      </td>
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 1
      </td>
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 2
      </td>
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 3
      </td>
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 4
      </td>
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 1
      </td>
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 2
      </td>
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 3
      </td>
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 4
      </td>
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 5
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> SortableInteractive story renders snapshot 1`] = `
<table
  class="table"
>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          Sortable
          <button
            class="button button--layout-icon-only button--tertiary button--sm button--size-sm button--variant-default"
            title="Sort"
            type="button"
          >
            <span
              class="button__text"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1rem"
                style="--icon-size: 1rem;"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 5.83l2.46 2.46c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L12.7 3.7c-.39-.39-1.02-.39-1.41 0L8.12 6.88c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 5.83zm0 12.34l-2.46-2.46c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l3.17 3.18c.39.39 1.02.39 1.41 0l3.17-3.17c.39-.39.39-1.02 0-1.41-.39-.39-1.02-.39-1.41 0L12 18.17z"
                />
              </svg>
            </span>
          </button>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          Not sortable
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Value 1
      </td>
      <td
        class="table-cell"
      >
        Value A
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Value 3
      </td>
      <td
        class="table-cell"
      >
        Value B
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Value 2
      </td>
      <td
        class="table-cell"
      >
        Value C
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Value 4
      </td>
      <td
        class="table-cell"
      >
        Value D
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> StackedCardsExample story renders snapshot 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr
        class="table-row table-row--header"
      >
        <th
          class="table-header-cell"
        >
          <div
            class="table-header-cell__container"
          >
            Students
          </div>
        </th>
        <th
          class="table-header-cell"
        >
          <div
            class="table-header-cell__container"
          >
            Status
          </div>
        </th>
        <th
          class="table-header-cell"
        >
          <div
            class="table-header-cell__container"
          >
            Cog skill
          </div>
        </th>
        <th
          class="table-header-cell"
        >
          <div
            class="table-header-cell__container"
          >
            Time submitted
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Araya, Raquel
        </td>
        <td
          class="table-cell"
        >
          Stop and Revise
        </td>
        <td
          class="table-cell"
        >
          3
        </td>
        <td
          class="table-cell"
        >
          2 hours ago
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Jesse Banet
        </td>
        <td
          class="table-cell"
        >
          Stop and Revise
        </td>
        <td
          class="table-cell"
        >
          1
        </td>
        <td
          class="table-cell"
        >
          3 days ago
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Julie Davis
        </td>
        <td
          class="table-cell"
        >
          Working
        </td>
        <td
          class="table-cell"
        >
          0
        </td>
        <td
          class="table-cell"
        >
          3 days ago
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Hussain, Adnan
        </td>
        <td
          class="table-cell"
        >
          Review Feedback
        </td>
        <td
          class="table-cell"
        >
          0
        </td>
        <td
          class="table-cell"
        >
          3 days ago
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Ilango, Megha
        </td>
        <td
          class="table-cell"
        >
          Needs Feedback
        </td>
        <td
          class="table-cell"
        >
          3
        </td>
        <td
          class="table-cell"
        >
          3 days ago
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Jaffer, Arman
        </td>
        <td
          class="table-cell"
        >
          Needs Feedback
        </td>
        <td
          class="table-cell"
        >
          1
        </td>
        <td
          class="table-cell"
        >
          3 days ago
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Kang, Michelle
        </td>
        <td
          class="table-cell"
        >
          Review Feedback
        </td>
        <td
          class="table-cell"
        >
          1
        </td>
        <td
          class="table-cell"
        >
          3 days ago
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Lewine, Chris
        </td>
        <td
          class="table-cell"
        >
          Continue Working
        </td>
        <td
          class="table-cell"
        >
          2
        </td>
        <td
          class="table-cell"
        >
          3 days ago
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Luo, Celia
        </td>
        <td
          class="table-cell"
        >
          Review Feedback
        </td>
        <td
          class="table-cell"
        >
          1
        </td>
        <td
          class="table-cell"
        >
          3 days ago
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> TableWithCaption story renders snapshot 1`] = `
<table
  class="table"
>
  <caption>
    Optional caption for the table. Must be first descendant of Table if used.
  </caption>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          Name
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          Status
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          Chart
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          Window
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          Last Update
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 1
      </td>
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 2
      </td>
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 3
      </td>
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 4
      </td>
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 1
      </td>
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 2
      </td>
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 3
      </td>
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 4
      </td>
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 1
      </td>
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 2
      </td>
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 3
      </td>
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 4
      </td>
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 1
      </td>
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 2
      </td>
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 3
      </td>
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 4
      </td>
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 5
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> TableWithStyledHeader story renders snapshot 1`] = `
<table
  class="table"
>
  <caption>
    Optional caption for the table. Must be first descendant of Table if used.
  </caption>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          <em>
            Name
          </em>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          <em>
            Status
          </em>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          <em>
            Chart
          </em>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          <em>
            Window
          </em>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="table-header-cell__container"
        >
          <em>
            Last Update
          </em>
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 1
      </td>
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 2
      </td>
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 3
      </td>
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 4
      </td>
      <td
        class="table-cell"
      >
        Table Row 1, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 1
      </td>
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 2
      </td>
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 3
      </td>
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 4
      </td>
      <td
        class="table-cell"
      >
        Table Row 2, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 1
      </td>
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 2
      </td>
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 3
      </td>
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 4
      </td>
      <td
        class="table-cell"
      >
        Table Row 3, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 1
      </td>
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 2
      </td>
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 3
      </td>
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 4
      </td>
      <td
        class="table-cell"
      >
        Table Row 4, Table Cell 5
      </td>
    </tr>
  </tbody>
</table>
`;
